crates/tests/databases-tests/src/citus/snapshots/databases_tests__citus__query_tests__predicates__select_where_album_id_equals_self.snap
---
source: crates/tests/databases-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 340,
        "Title": "Liszt - 12 Études D'Execution Transcendante"
      }
    ]
  }
]
