crates/tests/databases-tests/src/citus/snapshots/databases_tests__citus__query_tests__predicates__select_where_album_id_is_not_null.snap
---
source: crates/tests/databases-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Killers"
      },
      {
        "Title": "Live After Death"
      },
      {
        "Title": "Live At Donington 1992 (Disc 1)"
      },
      {
        "Title": "Live At Donington 1992 (Disc 2)"
      },
      {
        "Title": "No Prayer For The Dying"
      }
    ]
  }
]
